# xr2

./: .dockerignore  .env.prod  .gitignore  DEPLOYMENT.md  DEPLOY_TIPS.md  DOCKER_FIX.md  DOCKER_README.md  DOCKER_REBUILD_INSTRUCTIONS.md  Dockerfile  Dockerfile.test  FINAL_DOCKER_FIX.md  FIXES_APPLIED.md  LOCAL_SETUP.md  Makefile  QUICKSTART.md  QUICK_DEPLOY.md  QUICK_FIX.md  README.md  SECURITY_GUIDE.md  SERVER_FIX.md  TESTING_GUIDE.md  admin_cookies.txt  alembic.ini  auto-test.py  check-server.sh  cookies.txt  deploy-optimized.sh  deploy-to-server.sh  deploy.sh  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  env.example  env.local.example  main.py  package-lock.json  package.json  prepare-server.sh  requirements.txt  restore_events.py  (+6 more)
alembic/: env.py
alembic/versions/: 028d183da5b9_add_encrypted_key_to_productapikey.py  138e74552494_update_ab_test_model_for_simple_ab_.py  1bd27b5b4775_add_missing_tables_and_fields.py  (+11 more)
app/api/: __init__.py  (+20 more)
data/: default_llm_providers.json
monitoring/: prometheus.yml
nginx/: nginx.conf  nginx.prod.conf
prompt-editor/: .dockerignore  Dockerfile  Dockerfile.fast  cookies.txt  files  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  test_prompts_solution.py  types.tsx
scripts/: DEPLOY_SETUP.md  generate-htpasswd.sh  init_db.py  init_db.sql  init_llm_providers.py  setup_project.py
sdk/python pip/: README.md  howtouse.md  pyproject.toml
sdk/python pip/examples/: basic_async.py  basic_sync.py
sdk/python pip/xr2_sdk/: __init__.py  client.py  config.py  models.py
(+171 files in other folders)
